# make-tutorial

./: .gitignore  README.md
cmake-part1/: CMakeLists.txt  readme.md
cmake-part1/src/: sphere_trig.hpp
cmake-part2/: CMakeLists.txt  readme.md
cmake-part2/include/: sphere_trig.hpp
cmake-part2/src/: print.cpp
cmake-part3/: CMakeLists.txt  readme.md
cmake-part4/: CMakeLists.txt  readme.md
cmake-part4/include/: io.hpp
cmake-part4/src/: io.cpp  listheader.cpp
cmake-part5/: CMakeLists.txt  readme.md
cmake-part5/include/: io.hpp
code/include/: print.hpp
make-part1/: compile_script.sh  makefile  makefile2  makefile3  makefile4  makefile5  readme.md
make-part1/src/: main.cpp  print.hpp  sphere_trig.cpp
make-part2/: make_static_lib.sh  makefile  makefile2  readme.md
make-part2/build2/: listheader
make-part2/src/: main.cpp
make-part2/src2/: io.hpp
make-part3/: makefile  readme.md
make-part3/src/: io.cpp
